@@ -6,12 +6,16 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.junit.jupiter.api.extension.ExtendWith;
+
+import java.time.LocalDate;
+import java.util.*;
+
 import static org.mockito.Mockito.*;
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.time.LocalDate;
-import java.util.Optional;
-
+@ExtendWith(MockitoExtension.class)
 public class WorkoutServiceTest {
 
     @Mock
@@ -23,65 +27,74 @@ public class WorkoutServiceTest {
     private Workout workout;
 
     @BeforeEach
-    public void setup() {
-        workout = new Workout("Push-up", 20, "Medium", LocalDate.now(), "Strength");
+    public void setUp() {
+        workout = new Workout();
+        workout.setId(1L);
+        workout.setName("Push-up");
+        workout.setDuration(30);
+        workout.setIntensity("Medium");
+        workout.setDate(LocalDate.now());
+        workout.setCategory("Strength");
     }
 
     @Test
     public void testSaveWorkout() {
-        // Mock the save method to return the same workout object
         when(workoutRepository.save(workout)).thenReturn(workout);
 
+        // Test saveWorkout
         Workout savedWorkout = workoutService.saveWorkout(workout);
 
         assertThat(savedWorkout).isNotNull();
         assertThat(savedWorkout.getName()).isEqualTo("Push-up");
+
         verify(workoutRepository, times(1)).save(workout);
     }
 
     @Test
+    public void testGetAllWorkouts() {
+        List<Workout> workouts = Collections.singletonList(workout);
+        when(workoutRepository.findAll()).thenReturn(workouts);
+
+        // Test getAllWorkouts
+        List<Workout> result = workoutService.getAllWorkouts();
+
+        assertThat(result).contains(workout);
+        verify(workoutRepository, times(1)).findAll();
+    }
+
+    @Test
     public void testGetWorkoutById() {
-        // Mock the repository to return the workout when findById is called
         when(workoutRepository.findById(workout.getId())).thenReturn(Optional.of(workout));
 
+        // Test getWorkoutById
         Optional<Workout> foundWorkout = workoutService.getWorkoutById(workout.getId());
 
         assertThat(foundWorkout).isPresent();
         assertThat(foundWorkout.get().getName()).isEqualTo("Push-up");
+
         verify(workoutRepository, times(1)).findById(workout.getId());
     }
 
     @Test
     public void testDeleteWorkoutById() {
-        // Mocking the delete method does not need to return anything, but we want to verify if it's called
-        doNothing().when(workoutRepository).deleteById(workout.getId());
-
         workoutService.deleteWorkoutById(workout.getId());
 
+        // Verify deleteById interaction
         verify(workoutRepository, times(1)).deleteById(workout.getId());
     }
 
     @Test
-    public void testGetAllWorkouts() {
-        // Test to check if all workouts are fetched correctly
-        when(workoutRepository.findAll()).thenReturn(List.of(workout));
+    public void testCalculateProgress() {
+        List<Workout> workouts = Arrays.asList(workout, new Workout("Squat", 20, "High", LocalDate.now(), "Strength"));
+        when(workoutRepository.findAll()).thenReturn(workouts);
 
-        List<Workout> workouts = workoutService.getAllWorkouts();
+        // Test calculateProgress
+        Map<String, Object> progress = workoutService.calculateProgress();
 
-        assertThat(workouts).hasSize(1);
-        assertThat(workouts.get(0).getName()).isEqualTo("Push-up");
+        assertThat(progress).containsKey("totalDuration");
+        assertThat(progress).containsKey("mostFrequentType");
+        assertThat(progress).containsKey("totalWorkouts");
+
         verify(workoutRepository, times(1)).findAll();
-    }
-
-    @Test
-    public void testUpdateWorkout() {
-        // Assume that workout exists and is updated
-        workout.setDuration(30); // Modify the workout to simulate update
-        when(workoutRepository.save(workout)).thenReturn(workout);
-
-        Workout updatedWorkout = workoutService.saveWorkout(workout);
-
-        assertThat(updatedWorkout.getDuration()).isEqualTo(30);
-        verify(workoutRepository, times(1)).save(workout);
     }
 }
